--- a/assets/i18n/setting_ko.i18n.json
+++ b/assets/i18n/setting_ko.i18n.json
@@ -10,6 +10,13 @@
     "action": "로그인하기"
   },
   "feedbackReport": "피드백 · 버그 제보하기",
+  "group": {
+    "title": "그룹",
+    "create": "그룹 만들기",
+    "my": "내가 속한 그룹들",
+    "empty": "속한 그룹이 없습니다.",
+    "howToJoin": "특정 그룹에 속하길 바라신다면, 해당 그룹의 관리자에게 문의해주세요."
+  },
   "open": "열기",
   "name": "이름",
   "studentId": "학번",
