--- a/assets/i18n/setting_ko.i18n.json
+++ b/assets/i18n/setting_ko.i18n.json
@@ -15,7 +15,8 @@
     "create": "그룹 만들기",
     "my": "내가 속한 그룹들",
     "empty": "속한 그룹이 없습니다.",
-    "howToJoin": "특정 그룹에 속하길 바라신다면, 해당 그룹의 관리자에게 문의해주세요."
+    "howToJoin": "특정 그룹에 속하길 바라신다면, 해당 그룹의 관리자에게 문의해주세요.",
+    "people": "$count명"
   },
   "open": "열기",
   "name": "이름",
