fix: wrong NoticeType

--- a/assets/i18n/notice.i18n.json
+++ b/assets/i18n/notice.i18n.json
@@ -3,8 +3,8 @@
     "deadline": "Deadline",
     "recruit": "Recruit",
     "event": "Event",
-    "general": "General",
-    "hot": "Ziggle Pick",
+    "etc": "General",
+    "zigglepick": "Ziggle Pick",
     "academic": "Academic",
     "all": "All",
     "written": "Written"
