--- a/assets/i18n/notice_ko.i18n.json
+++ b/assets/i18n/notice_ko.i18n.json
@@ -3,8 +3,8 @@
     "deadline": "마감임박",
     "recruit": "모집",
     "event": "행사",
-    "general": "일반",
-    "hot": "지글픽",
+    "etc": "일반",
+    "zigglepick": "지글픽",
     "academic": "학사",
     "all": "전체",
     "written": "내가 쓴 공지"
